Fix word-wrapping breaking on word and not all.

--- a/app/src/styles/override.css
+++ b/app/src/styles/override.css
@@ -132,7 +132,7 @@ a {
 
 .multiline-content {
     white-space: pre-line;
-    word-break: break-all;
+    word-wrap: break-word;
 }
 
 .auth0-lock-header-bg {
